<resources>
    <string name="app_name">Marketplace</string>
<!--    <string name="title_activity_navigation">NavigationActivity</string>-->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="keranjang">Keranjang</string>
    <string name="akun">Akun</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="masuk">Masuk</string>
    <string name="google">Google</string>
    <string name="masuk_dengan">atau masuk dengan</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="silahkan_login">Silahkan Login</string>
    <string name="nama">Nama</string>
    <string name="no_tlp">No. Telepon</string>
    <string name="logout">Logout</string>
    <string name="buat_akun">Buat Akun Baru!</string>
    <string name="login">Login</string>
    <string name="sudah_punya_akun">Sudah punya akun.?</string>
    <string name="hz">Hz</string>
    <string name="cari_produk">Pencarian Produk</string>
    <string name="gopay">Rp. 0</string>
    <string name="coin">0 Coin</string>
    <string name="member">Member Gold</string>
    <string name="_1_kupon_baru">1 Kupon Baru</string>
    <string name="rumah_saya">Rumah Saya</string>
    <string name="dikirim_ke">Dikirim Ke</string>
    <string name="kategori">Nama Kategori</string>
    <string name="terlaris">Terlaris</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="harga">Rp. 10.000</string>
    <string name="grosir">Grosir</string>
    <string name="pekalongan">Pekalongan</string>
    <string name="rating">5.0 | Terjual 5 kali</string>
    <string name="produk_terlaris">Terlaris Hari Ini</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="produk_terbaru">Produk Terbaru</string>
    <string name="diskon">10%</string>
    <string name="mulai_bisnis">Mau Memulai Berbisnis.?</string>
    <string name="buka_toko">Buka Toko Gratis</string>
    <string name="info_toko">Masukan Informasi Toko</string>
    <string name="nama_mudah_diingat">Nama yang menarik lebih diingat oleh pembeli / Nama yang sudah disimpan tidak dapat diubah</string>
    <string name="apa_nama_tokomu">Apa Nama Tokomu.?</string>
    <string name="lokasi_toko">Lokasi Toko</string>
    <string name="lokasi">Lokasi toko memudahkan pembeli agar mengetahui dari mana barang dikirim</string>
    <string name="buat_toko">Buat Toko</string>
    <string name="transaksi_sejak_bergabung">Transaksi sejak bergabung</string>
    <string name="jml_transaksi">0/100</string>
    <string name="skor_toko">Skor performa toko</string>
    <string name="pilih_alamat">Pilih Alamat</string>
    <string name="kajen">Kajen</string>
    <string name="alamat_saya">Jl. Pahlawan No. 10 Bandungan wetan kajen rt 11 rw 03 kec. Kajen, kel. Kajen, kab. Pekalongan</string>
    <string name="nomer">082324118691</string>
    <string name="data_tidak_ditemukan">Data tidak ditemukan</string>
    <string name="provinsi">Provinsi</string>
    <string name="kota">Kota</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kode_pos">Kode Pos</string>
    <string name="phone">Phone</string>
</resources>