<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.toko.BukaTokoActivity">

    <include
        android:id="@+id/ly_toolbar"
        layout="@layout/layout_toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_toko"
                android:textColor="@color/dark"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_nama_toko"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apa_nama_tokomu"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:inputType="text"
                    android:background="@color/white"
                    android:paddingStart="0dp"
                    android:textSize="@dimen/_15ssp"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_mudah_diingat"
                android:textColor="@color/grey"
                android:textSize="@dimen/_10ssp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_lokasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lokasi_toko"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:inputType="text"
                    android:background="@color/white"
                    android:paddingStart="0dp"
                    android:textSize="@dimen/_15ssp"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lokasi"
                android:textColor="@color/grey"
                android:textSize="@dimen/_10ssp"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_buka_toko"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:text="@string/buat_toko"
            android:textAllCaps="false"
            android:textSize="@dimen/_15ssp"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</LinearLayout>