<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.toko.TokoSayaActivity"
    android:orientation="vertical">

    <include
        android:id="@+id/ly_toolbar"
        layout="@layout/layout_toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_15sdp">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent"
        android:gravity="center_vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            app:cardCornerRadius="@dimen/_25sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/inisial"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/hz"
                    android:gravity="center"
                    android:textSize="@dimen/_25ssp"
                    android:textStyle="bold"
                    android:background="@color/colorPrimary_400"
                    android:textColor="@color/white"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/_10sdp">

            <TextView
                android:id="@+id/tv_nama_toko"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apa_nama_tokomu"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:textColor="@color/dark"/>

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/harga"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"/>


        </LinearLayout>

    </LinearLayout>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skor_toko"
        android:layout_marginEnd="@dimen/_3sdp"
        android:textColor="@color/dark"
        android:textSize="@dimen/_11ssp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Button.OutlineBox"
        android:layout_marginTop="@dimen/_8sdp"
        app:cardElevation="0dp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        app:cardCornerRadius="@dimen/_5sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UselessParent"
                android:layout_centerVertical="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transaksi_sejak_bergabung"
                    android:layout_marginEnd="@dimen/_3sdp"
                    android:textColor="@color/dark"
                    android:textSize="@dimen/_12ssp"/>


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jml_transaksi"
                android:textColor="@color/dark"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_5sdp"
        android:background="#EDEDED"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apa_nama_tokomu"
            android:textSize="@dimen/_11ssp"
            android:textColor="@color/grey"
            android:textAppearance="@style/TypographyStyles.Text2.Bold"
            android:layout_marginHorizontal="@dimen/_15sdp"/>

        <LinearLayout
            android:id="@+id/btn_alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_6sdp"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:paddingHorizontal="@dimen/_15sdp"
            style="@style/layout_clickable">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_16sdp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lokssi"
                app:tint="@color/grey"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pilih_alamat"
                android:textAppearance="@style/TypographyStyles.Text2"
                android:layout_marginStart="@dimen/_8sdp"/>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>